# bigdata-ecommerce

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
docker/: docker-compose.yml  init-postgres.sql
notebooks/: 01_data_exploration.ipynb
scripts/: install_uv.sh  load_data_graph.sh  load_data_mongodb.sh  load_data_psql.sh  setup_security.sh
scripts/benchmarking/: simple_benchmark.py
scripts/ingestion/: clean_data.py  load_data_graph.py  load_data_mongodb.py  load_data_psql.py
scripts/security/: secure_connections.py
